V20.0.0/tests/output.txt
In file included from ./include/tester/internal/Assert/a_throws.hpp:8:
./include/tester/internal/Assert/../Implementation/throws.hpp:42:36: error: cannot form a reference to 'void'
   42 |             } catch (const Expected& ex) {
      |                                    ^
./include/tester/internal/Assert/../Implementation/throws.hpp:77:24: note: in instantiation of function template specialization 'internal::impl_throws::type_throws<void, (lambda at tests/throws.cpp:30:5) &>' requested here
   77 |                 return type_throws(func, funcName, file, line);
      |                        ^
./include/tester/internal/Expect/e_throws.hpp:35:40: note: in instantiation of function template specialization 'internal::impl_throws::throws<std::runtime_error, (lambda at tests/throws.cpp:30:5) &>' requested here
   35 |             auto result = impl_throws::throws<Expected>(func, funcName, file, line);
      |                                        ^
tests/throws.cpp:30:5: note: in instantiation of function template specialization 'internal::Expects::expectThrows<std::runtime_error, (lambda at tests/throws.cpp:30:5)>' requested here
   30 |     EXPECT_THROWS(throw std::runtime_error("err"), std::runtime_error);
      |     ^
./include/tester/internal/Expect/e_throws.hpp:19:28: note: expanded from macro 'EXPECT_THROWS'
   19 | #define EXPECT_THROWS(...) EXPECT_THROWS_MACRO_CHOOSER(__VA_ARGS__)(__VA_ARGS__)
      |                            ^
./include/tester/internal/Expect/e_throws.hpp:16:30: note: expanded from macro 'EXPECT_THROWS_MACRO_CHOOSER'
   16 |     GET_3RD_ARG(__VA_ARGS__, EXPECT_THROWS_2_ARGS, EXPECT_THROWS_1_ARGS)
      |                              ^
In file included from tests/throws.cpp:1:
In file included from ./include/tester/Tests.hpp:6:
In file included from ./include/tester/internal/Assert.hpp:15:
In file included from ./include/tester/internal/Assert/a_throws.hpp:8:
./include/tester/internal/Assert/../Implementation/throws.hpp:42:36: error: cannot form a reference to 'void'
   42 |             } catch (const Expected& ex) {
      |                                    ^
./include/tester/internal/Assert/../Implementation/throws.hpp:77:24: note: in instantiation of function template specialization 'internal::impl_throws::type_throws<void, (lambda at tests/throws.cpp:34:5) &>' requested here
   77 |                 return type_throws(func, funcName, file, line);
      |                        ^
./include/tester/internal/Expect/e_throws.hpp:35:40: note: in instantiation of function template specialization 'internal::impl_throws::throws<std::runtime_error, (lambda at tests/throws.cpp:34:5) &>' requested here
   35 |             auto result = impl_throws::throws<Expected>(func, funcName, file, line);
      |                                        ^
tests/throws.cpp:35:9: note: in instantiation of function template specialization 'internal::Expects::expectThrows<std::runtime_error, (lambda at tests/throws.cpp:34:5)>' requested here
   35 |         EXPECT_THROWS(throw std::logic_error("err"), std::runtime_error)
      |         ^
./include/tester/internal/Expect/e_throws.hpp:19:28: note: expanded from macro 'EXPECT_THROWS'
   19 | #define EXPECT_THROWS(...) EXPECT_THROWS_MACRO_CHOOSER(__VA_ARGS__)(__VA_ARGS__)
      |                            ^
./include/tester/internal/Expect/e_throws.hpp:16:30: note: expanded from macro 'EXPECT_THROWS_MACRO_CHOOSER'
   16 |     GET_3RD_ARG(__VA_ARGS__, EXPECT_THROWS_2_ARGS, EXPECT_THROWS_1_ARGS)
      |                              ^
In file included from tests/throws.cpp:1:
In file included from ./include/tester/Tests.hpp:6:
In file included from ./include/tester/internal/Assert.hpp:15:
In file included from ./include/tester/internal/Assert/a_throws.hpp:8:
./include/tester/internal/Assert/../Implementation/throws.hpp:42:36: error: cannot form a reference to 'void'
   42 |             } catch (const Expected& ex) {
      |                                    ^
./include/tester/internal/Assert/../Implementation/throws.hpp:77:24: note: in instantiation of function template specialization 'internal::impl_throws::type_throws<void, (lambda at tests/throws.cpp:40:5) &>' requested here
   77 |                 return type_throws(func, funcName, file, line);
      |                        ^
./include/tester/internal/Expect/e_throws.hpp:35:40: note: in instantiation of function template specialization 'internal::impl_throws::throws<std::runtime_error, (lambda at tests/throws.cpp:40:5) &>' requested here
   35 |             auto result = impl_throws::throws<Expected>(func, funcName, file, line);
      |                                        ^
tests/throws.cpp:41:9: note: in instantiation of function template specialization 'internal::Expects::expectThrows<std::runtime_error, (lambda at tests/throws.cpp:40:5)>' requested here
   41 |         EXPECT_THROWS([](){}(), std::runtime_error)
      |         ^
./include/tester/internal/Expect/e_throws.hpp:19:28: note: expanded from macro 'EXPECT_THROWS'
   19 | #define EXPECT_THROWS(...) EXPECT_THROWS_MACRO_CHOOSER(__VA_ARGS__)(__VA_ARGS__)
      |                            ^
./include/tester/internal/Expect/e_throws.hpp:16:30: note: expanded from macro 'EXPECT_THROWS_MACRO_CHOOSER'
   16 |     GET_3RD_ARG(__VA_ARGS__, EXPECT_THROWS_2_ARGS, EXPECT_THROWS_1_ARGS)
      |                              ^
In file included from tests/throws.cpp:1:
In file included from ./include/tester/Tests.hpp:6:
In file included from ./include/tester/internal/Assert.hpp:15:
In file included from ./include/tester/internal/Assert/a_throws.hpp:8:
./include/tester/internal/Assert/../Implementation/throws.hpp:42:36: error: cannot form a reference to 'void'
   42 |             } catch (const Expected& ex) {
      |                                    ^
./include/tester/internal/Assert/../Implementation/throws.hpp:77:24: note: in instantiation of function template specialization 'internal::impl_throws::type_throws<void, (lambda at tests/throws.cpp:50:5) &>' requested here
   77 |                 return type_throws(func, funcName, file, line);
      |                        ^
./include/tester/internal/Expect/e_throws.hpp:35:40: note: in instantiation of function template specialization 'internal::impl_throws::throws<std::runtime_error, (lambda at tests/throws.cpp:50:5) &>' requested here
   35 |             auto result = impl_throws::throws<Expected>(func, funcName, file, line);
      |                                        ^
tests/throws.cpp:50:5: note: in instantiation of function template specialization 'internal::Expects::expectThrows<std::runtime_error, (lambda at tests/throws.cpp:50:5)>' requested here
   50 |     EXPECT_THROWS(throw MyError("err"), std::runtime_error);
      |     ^
./include/tester/internal/Expect/e_throws.hpp:19:28: note: expanded from macro 'EXPECT_THROWS'
   19 | #define EXPECT_THROWS(...) EXPECT_THROWS_MACRO_CHOOSER(__VA_ARGS__)(__VA_ARGS__)
      |                            ^
./include/tester/internal/Expect/e_throws.hpp:16:30: note: expanded from macro 'EXPECT_THROWS_MACRO_CHOOSER'
   16 |     GET_3RD_ARG(__VA_ARGS__, EXPECT_THROWS_2_ARGS, EXPECT_THROWS_1_ARGS)
      |                              ^
In file included from tests/throws.cpp:1:
In file included from ./include/tester/Tests.hpp:6:
In file included from ./include/tester/internal/Assert.hpp:15:
In file included from ./include/tester/internal/Assert/a_throws.hpp:8:
./include/tester/internal/Assert/../Implementation/throws.hpp:42:36: error: cannot form a reference to 'void'
   42 |             } catch (const Expected& ex) {
      |                                    ^
./include/tester/internal/Assert/../Implementation/throws.hpp:77:24: note: in instantiation of function template specialization 'internal::impl_throws::type_throws<void, (lambda at tests/throws.cpp:143:5) &>' requested here
   77 |                 return type_throws(func, funcName, file, line);
      |                        ^
./include/tester/internal/Expect/e_throws.hpp:35:40: note: in instantiation of function template specialization 'internal::impl_throws::throws<std::runtime_error, (lambda at tests/throws.cpp:143:5) &>' requested here
   35 |             auto result = impl_throws::throws<Expected>(func, funcName, file, line);
      |                                        ^
tests/throws.cpp:144:9: note: in instantiation of function template specialization 'internal::Expects::expectThrows<std::runtime_error, (lambda at tests/throws.cpp:143:5)>' requested here
  144 |         EXPECT_THROWS(throw 5, std::runtime_error)
      |         ^
./include/tester/internal/Expect/e_throws.hpp:19:28: note: expanded from macro 'EXPECT_THROWS'
   19 | #define EXPECT_THROWS(...) EXPECT_THROWS_MACRO_CHOOSER(__VA_ARGS__)(__VA_ARGS__)
      |                            ^
./include/tester/internal/Expect/e_throws.hpp:16:30: note: expanded from macro 'EXPECT_THROWS_MACRO_CHOOSER'
   16 |     GET_3RD_ARG(__VA_ARGS__, EXPECT_THROWS_2_ARGS, EXPECT_THROWS_1_ARGS)
      |                              ^
5 errors generated.
make: *** [build/tests_throws.o] Error 1